<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>
  <groupId>net.learning64</groupId>
  <artifactId>geometry</artifactId>
  <version>0.0.1-SNAPSHOT</version>
  <name>geometry</name>
   <properties>
  	<maven.compiler.target>17</maven.compiler.target>
  	<maven.compiler.source>17</maven.compiler.source>
  </properties>
  <dependencies>
	  <dependency>
	    <groupId>org.junit.jupiter</groupId>
	    <artifactId>junit-jupiter-api</artifactId>
	    <version>5.9.0</version>
	    <scope>test</scope>
	  </dependency>
	  <dependency>
	    <groupId>org.junit.jupiter</groupId>
	    <artifactId>junit-jupiter-params</artifactId>
	    <version>5.9.0</version>
	    <scope>test</scope>
  	  </dependency>
	  <dependency>
	    <groupId>org.junit.jupiter</groupId>
	    <artifactId>junit-jupiter-engine</artifactId>
	    <version>5.9.0</version>
	    <scope>test</scope>
	</dependency>
	<dependency>
	    <groupId>jakarta.validation</groupId>
	    <artifactId>jakarta.validation-api</artifactId>
	    <version>3.0.2</version>
	</dependency>
  </dependencies>
  <build>
    <plugins>
        <plugin>
            <groupId>org.apache.maven.plugins</groupId>
            <artifactId>maven-surefire-plugin</artifactId>
            <version>2.22.2</version>
            <configuration>
            	<argLine>--enable-preview</argLine>
        	</configuration>
        </plugin>
        <plugin>
        	<groupId>org.apache.maven.plugins</groupId>
        	<artifactId>maven-compiler-plugin</artifactId>
        	<version>3.10.1</version>
	        <configuration>
	          <compilerArgs>
	             --enable-preview
	          </compilerArgs>
	        </configuration>
	      </plugin>
    </plugins>
</build>
</project>